catkin_ws/logs/backend/build.make.040.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:484:15: error: invalid conversion from ‘int*’ to ‘int’ [-fpermissive]
      temp_ids = ids; 
               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:485:22: warning: NULL used in arithmetic [-Wpointer-arith]
      while(temp_ids!=NULL)
                      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:487:12: error: invalid type argument of unary ‘*’ (have ‘int’)
       if (*temp_ids == id) // same key frames matched all the time?  
            ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
